# Oxbb

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: oxdna.yaml
docs/: bbflow-update-slides.html
scripts/: evaluate_oxdna_samples.py  sample_oxdna_flow.py  train_oxdna_flow.py
src/oxbb/: __init__.py  oxdna_dataset.py  oxdna_eval.py  oxdna_flow_model.py  oxdna_geometry.py
tests/: test_oxdna_geometry.py
